--- a/index.html
+++ b/index.html
@@ -5,7 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Whiteboard</title>
 </head>
-<body>
+<body style="margin: 0;">
     
+<script src="https://ccmjs.github.io/ccm/ccm.js"></script>
+
+<script>
+    ccm.start("ccm.whiteboard.js", {
+        title: "TEST",
+}, document.body);
+</script>
 </body>
 </html>
