--- a/index.html
+++ b/index.html
@@ -4,15 +4,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Whiteboard</title>
+    <script src="https://ccmjs.github.io/ccm/ccm.js"></script>
 </head>
 <body style="margin: 0;">
     
-<script src="https://ccmjs.github.io/ccm/ccm.js"></script>
-
+<!-- <h1>hellloo</h1> -->
+<div></div>
 <script>
     ccm.start("ccm.whiteboard.js", {
-        title: "TEST",
-}, document.body);
+        title: "Whiteboard",
+}, document.querySelector("div"));
 </script>
+
 </body>
 </html>
