updated Whiteboard func

--- a/index.html
+++ b/index.html
@@ -4,15 +4,20 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Whiteboard</title>
-    <script src="https://ccmjs.github.io/ccm/ccm.js"></script>
+    
 </head>
 <body style="margin: 0;">
+    <script src="https://ccmjs.github.io/ccm/ccm.js"></script>
     
 <!-- <h1>hellloo</h1> -->
 <div></div>
 <script>
     ccm.start("ccm.whiteboard.js", {
-        title: "Whiteboard",
+        // title: "Whiteboard",
+        // currentSize: 22,
+        // currentColor: "#004ee1",
+        // currentTool: "pen",
+        // logo:"",
 }, document.querySelector("div"));
 </script>
 
