--- a/index.html
+++ b/index.html
@@ -1,25 +1,27 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Whiteboard</title>
-    
-</head>
-<body style="margin: 0;">
+  </head>
+  <body style="margin: 0">
     <script src="https://ccmjs.github.io/ccm/ccm.js"></script>
-    
-<!-- <h1>hellloo</h1> -->
-<div></div>
-<script>
-    ccm.start("ccm.whiteboard.js", {
-        // title: "Whiteboard",
-        // currentSize: 22,
-        // currentColor: "#004ee1",
-        // currentTool: "pen",
-        // logo:"",
-}, document.querySelector("div"));
-</script>
 
-</body>
+    <!-- <h1>hellloo</h1> -->
+    <div></div>
+    <script>
+      ccm.start(
+        "ccm.whiteboard.js",
+        {
+          title: "Whiteboard",
+          currentSize: 22,
+          currentColor: "#004ee1", //nur HEX Code
+          currentTool: "pen",
+          logo: "https://de.wikipedia.org/wiki/Logo_%28Nachrichtensendung%29#/media/Datei:ZDF_logo!_Logo_2021.svg",
+        },
+        document.querySelector("div")
+      ); // or .body dann brauche ich kein div
+    </script>
+  </body>
 </html>
