feat: added navBarContainer & navBarContainer

--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
         "ccm.whiteboard.js",
         {
           title: "Whiteboard",
-          currentSize: 22,
-          currentColor: "#004ee1", //nur HEX Code
-          currentTool: "pen",
-          logo: "https://de.wikipedia.org/wiki/Logo_%28Nachrichtensendung%29#/media/Datei:ZDF_logo!_Logo_2021.svg",
+        //   currentSize: 22,
+        //   currentColor: "#004ee1", //nur HEX Code
+        //   currentTool: "pen",
+          logo: "https://www.logologo.com/logos/abstract-isometric-logo-design-free-logo.jpg",
         },
         document.querySelector("div")
       ); // or .body dann brauche ich kein div
